[gd_scene load_steps=13 format=2]

[ext_resource path="res://objects/Bread.gd" type="Script" id=1]
[ext_resource path="res://assets/sounds/bread_walk.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/ui/player_cursor.png" type="Texture" id=3]
[ext_resource path="res://assets/bread.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/bread_walk2.wav" type="AudioStream" id=5]
[ext_resource path="res://objects/Cursor.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=30]
radius = 7.0

[sub_resource type="CircleShape2D" id=34]
radius = 6.0

[sub_resource type="ParticlesMaterial" id=35]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 20.0
gravity = Vector3( 0, 30, 0 )
initial_velocity = 24.0
initial_velocity_random = 0.25
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
color = Color( 0.552941, 0.392157, 0.298039, 1 )

[sub_resource type="Animation" id=32]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -8.0, 0.0, 8.0, 0.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_walk"
}, {
"args": [  ],
"method": "play_walk2"
} ]
}

[sub_resource type="Animation" id=33]
resource_name = "WalkLeft"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ), Vector2( 0, -2 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 8.0, 0.0, -8.0, 0.0 ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../AudioStreamPlayer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 2 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0.2, 0.6 )
}

[node name="Bread" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 11
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 30 )

[node name="HitBox" type="Area2D" parent="." groups=["hit_box"]]
position = Vector2( 0, 1 )
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 34 )

[node name="CrumbParticles" type="Particles2D" parent="."]
position = Vector2( 0, 8 )
emitting = false
amount = 6
lifetime = 1.5
fract_delta = false
local_coords = false
process_material = SubResource( 35 )

[node name="Cursor" type="Sprite" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
anims/Idle = SubResource( 32 )
anims/Walk = SubResource( 31 )
anims/WalkLeft = SubResource( 33 )

[node name="TrailTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="PassiveTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="area_entered" from="HitBox" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="HitBox" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="TrailTimer" to="." method="_on_TrailTimer_timeout"]
[connection signal="timeout" from="PassiveTimer" to="." method="_on_PassiveTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
